[tool.poetry]
name = "api-ai"
version = "0.1.0"
description = ""
authors = ["cheesecat47 <cheesecat47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = {extras = ["standard"], version = "^0.27.1"}
loguru = "^0.7.2"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
tqdm = "^4.66.2"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
pandas = "^2.2.1"
sqlmodel = "^0.0.16"
pymysql = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
isort = "^5.13.2"
black = "^24.2.0"
jupyter = "^1.0.0"


[tool.poetry.group.ai.dependencies]
mxnet = "^1.9.1"
gluonnlp = "0.8.0"
sentencepiece = "^0.2.0"
transformers = "^4.38.2"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
