[tool.poetry]
name = "api-ai"
version = "0.1.0"
description = ""
authors = ["cheesecat47 <cheesecat47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = {extras = ["standard"], version = "^0.27.1"}
loguru = "^0.7.2"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
tqdm = "^4.66.2"
pandas = "^2.2.1"
sqlmodel = "^0.0.16"
pymysql = "^1.1.0"
torch = {version = "^2.2.2+cpu", source = "pytorch-cpu-src"}
torchvision = {version = "^0.17.2+cpu", source = "pytorch-cpu-src"}
mxnet = "^1.9.1"
gluonnlp = "0.8.0"
sentencepiece = "^0.2.0"
transformers = {extras = ["torch"], version = "^4.39.2"}
kobert-tokenizer = {git = "https://github.com/SKTBrain/KoBERT.git", subdirectory = "kobert_hf", rev="47a69af87928fc24e20f571fe10c3cc9dd9af9a3"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
isort = "^5.13.2"
black = "^24.2.0"
jupyter = "^1.0.0"

[tool.poetry.group.ai]
optional = true

[tool.poetry.group.ai.dependencies]
ipywidgets = "^8.1.2"


[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
